# adv-http

./: .gitignore  .gitmodules  CIRCULAR_DEPENDENCIES.md  CMakeLists.txt  FSSetup.h  README.md  arduino-cli.yaml  examples.7z  files.txt  keywords.txt  library.json  library.properties  platformio.ini  pled.ino  sketch.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: build.yml  native-tests.yml
docs/: SplittingGuide.md
docs/backlog/: move-manifest.csv
docs/backlogs/: httpserveradvanced-decoupling-backlog.md
docs/httpserveradvanced/: EXAMPLES.md  FEATURE_IDEAS.md  LIBRARY_COMPARISON.md  LIBRARY_DOCUMENTATION.md  LUMALINK_HTTP_RENAME_RELEASE_NOTES.md  LUMALINK_RENAME_SURFACE_INVENTORY.md
docs/plans/: externalize-request-owned-pipeline-state-implementation-plan.md  httpserveradvanced-arduino-decoupling-plan.md  httpserveradvanced-filesystem-interface-plan.md  httpserveradvanced-testing-refactor-plan.md  notes.txt  testing-gaps.md  websocket-context-implementation-plan.md  websocket-support-plan.md
examples/: ExampleRuntime.h  FSSetup.h  WifiSetup.h  arduino-cli.yaml  sketch.yaml
examples/Basic/: Basic.ino
libraries/HTTPServer/: library.properties
libraries/HttpServerAdvanced/: FUNCTIONALITY_COMPARISON.md  LIBRARY_COMPARISON.md  MEMORY_ANALYSIS.md  library.properties
libraries/NetInterface/: .copilotrc.json  README.md  keywords.txt  library.json  library.properties  platformio.ini
platformio/: common.ini  esp32.ini  esp8266.ini  native.ini  rp2040.ini
platformio/noop/: main.cpp  native_main.cpp
scripts/: apply_move_manifest.py  cleanup_empty_dirs.py  fix_double_httpadv_path.py  fix_test_relative_includes.py  generate_deps.ps1  native_build.py  rewrite_includes.py  rewrite_test_includes.py  rewrite_test_includes_from_manifest.py
src/: HttpServerAdvanced.h  LumaLinkHttp.h  LumaLinkPlatform.h
src/compat/: ArduinoFileSystemAdapter.h  Availability.h  ByteStream.h  Clock.h  Compat.h  FileSystem.h  IFileSystem.h  IpAddress.h  PosixFileAdapter.h  Span.h  Stream.h  TransportInterfaces.h
src/core/: Defines.h  HttpContentTypes.h  HttpContext.cpp  HttpContext.h  HttpContextHandlerFactory.h  HttpContextPhase.h  HttpContextPipelineAdapter.cpp  HttpContextPipelineAdapter.h  HttpContextRunner.h  HttpHeader.h  HttpHeaderCollection.cpp  HttpHeaderCollection.h  HttpMethod.h  HttpRequest.cpp  HttpRequest.h  HttpRequestHandlerFactory.h  HttpRequestPhase.h  HttpRequestPipelineAdapter.cpp  HttpRequestPipelineAdapter.h  HttpRequestRunner.h  HttpStatus.h  HttpTimeouts.h  IHttpContextHandlerFactory.h  IHttpRequestHandlerFactory.h
src/handlers/: BufferedStringBodyHandler.cpp  BufferedStringBodyHandler.h  BufferingHttpHandlerBase.h  FormBodyHandler.cpp  FormBodyHandler.h  HandlerRestrictions.h  HandlerResult.h  HandlerTypes.h  HttpHandler.h  IHandlerProvider.h  IHttpHandler.h  JsonBodyHandler.cpp  JsonBodyHandler.h  MultipartFormDataHandler.cpp  MultipartFormDataHandler.h  RawBodyHandler.cpp  RawBodyHandler.h
src/httpadv/: namespace.h
src/llhttp/: VENDOR.md
src/pipeline/: ArduinoWiFiTransport.h  ConnectionSession.h  HttpPipeline.cpp  HttpPipeline.h  HttpProtocolExecution.cpp  HttpProtocolExecution.h  IPipelineHandler.h  IProtocolExecution.h  NativeSocketTransport.cpp  NativeSocketTransport.h  NetClient.h  NetClientAdapters.h  PipelineError.cpp  PipelineError.h  PipelineHandleClientResult.h  RequestHandlingResult.h  RequestParser.cpp  RequestParser.h  TransportEndpoint.h  TransportInterfaces.h
src/response/: ChunkedHttpResponseBodyStream.cpp  ChunkedHttpResponseBodyStream.h  FormResponse.cpp  FormResponse.h  HttpResponse.cpp  HttpResponse.h  HttpResponseBodyStream.h  HttpResponseIterators.cpp  HttpResponseIterators.h  IHttpResponse.h  JsonResponse.cpp  JsonResponse.h  StringResponse.cpp  StringResponse.h
src/routing/: BasicAuthentication.h  CrossOriginRequestSharing.h  (+8 more)
test/: README.md  test_filesystem_posix.cpp
tools/: assert-no-legacy-http-tokens.ps1  run_embedded_validation.ps1  run_native_tests.ps1
(+752 files in other folders)
